CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(geticc)
SET(FLTK_SKIP_OPENGL ON)
SET(FLTK_SKIP_FORMS ON)
SET(FLTK_SKIP_IMAGES ON)
SET(FLTK_SKIP_FLUID ON)
FIND_PACKAGE(FLTK REQUIRED)
ADD_EXECUTABLE(geticc geticc.cxx)
INCLUDE_DIRECTORIES(${FLTK_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(geticc ${FLTK_LIBRARIES})
