CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

option(BUILD_GUI "Build GUI" OFF)

PROJECT(geticc)

if (BUILD_GUI)
    SET(FLTK_SKIP_OPENGL ON)
    SET(FLTK_SKIP_FORMS ON)
    SET(FLTK_SKIP_IMAGES ON)
    SET(FLTK_SKIP_FLUID ON)
    FIND_PACKAGE(FLTK REQUIRED)
    INCLUDE_DIRECTORIES(${FLTK_INCLUDE_DIR})
else()
    add_definitions(-DNOGUI)
endif()

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_NAME}.cxx)

if(BUILD_GUI)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLTK_LIBRARIES})
endif()
