CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

option(BUILD_FLTK "Build GetICC with FLTK" OFF)

PROJECT(geticc VERSION 1.0.0)

if(NOT PROJECT_VERSION_PATCH)
    set(PROJECT_VERSION_PATCH 0)
endif()
if(NOT PROJECT_VERSION_TWEAK)
    set(PROJECT_VERSION_TWEAK 0)
endif()

if (BUILD_FLTK)
    SET(FLTK_SKIP_OPENGL ON)
    SET(FLTK_SKIP_FORMS ON)
    SET(FLTK_SKIP_IMAGES ON)
    SET(FLTK_SKIP_FLUID ON)
    FIND_PACKAGE(FLTK REQUIRED)
    INCLUDE_DIRECTORIES(${FLTK_INCLUDE_DIR})
else()
    add_definitions(-DNOGUI)
endif()

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_NAME}.cxx)

if(BUILD_FLTK)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLTK_LIBRARIES})
endif()

if(UNIX)
    include(GNUInstallDirs)
    install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
    install(FILES LICENSE README.md DESTINATION ${CMAKE_INSTALL_DOCDIR}-${PROJECT_VERSION})
endif()
